Bug 326799 - https connection may fails when using proxy under some conditions
Summary: https connection may fails when using proxy under some conditions
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: http (other bugs)
Version First Reported In: 4.11.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-28 20:33 UTC by Andrea Iacovitti
Modified: 2013-10-30 08:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2013-10-28 20:33:49 UTC
Suppose to have proxy settings configured to use automatic proxy via PAC script.
Because of this, also suppose connection to https://address1 is made through a proxy server, while connection to https://address2 is made directly.
Open konqueror (doesn't matter what html engine is used) then connect to https://address1. Now try to connect to https://address2, the request will fail.
To reproduce create a local proxy.pac file containing the following:
function FindProxyForURL(url, host) {
        if (shExpMatch(host, "*.kde.org")) {
                return "PROXY some.valid.proxy:port";
        }

        return "DIRECT";
}
and configure automatic proxy setting to use proxy.pac file.
Connect to https://bugs.kde.org (this should go through proxy), then try to do a request to another https url not in kde.org domain.
Comment 1 Andrea Iacovitti 2013-10-30 08:20:46 UTC
Git commit ef2163321f3572ef476eb6888de75ae460e0bc76 by Andrea Iacovitti.
Committed on 30/10/2013 at 08:16.
Pushed by aiacovitti into branch 'KDE/4.11'.

Make sure Qt application level proxy is set to QNetworkProxy::NoProxy
before connecting to host when it is not required.
FIXED-IN: 4.11.3
REVIEW: 113492

M  +3    -0    kioslave/http/http.cpp

http://commits.kde.org/kdelibs/ef2163321f3572ef476eb6888de75ae460e0bc76