Make sure Qt application level proxy is set to QNetworkProxy::NoProxy before connecting to host when it is not required.

BUG: 326799
FIXED-IN: 4.11.3
REVIEW: 113492